testing_utils/advanced-log-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advanced-log-generator
  labels:
    app: advanced-log-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advanced-log-generator
  template:
    metadata:
      labels:
        app: advanced-log-generator
    spec:
      containers:
      - name: advanced-log-generator
        image: busybox
        command: ["/bin/sh"]
        args:
        - -c
        - |
          [...]
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
