testing_utils/test-services-ingress-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-clusterip-svc
  labels:
    app: test-statefulset
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: test-statefulset
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodeport-svc
  labels:
    app: multi-container-pod
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    name: http
  selector:
    app: multi-container-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-nodeport-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  labels:
    tier: testing
spec:
  podSelector:
    matchLabels:
      app: test-statefulset
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: multi-container-pod
    ports:
    - protocol: TCP
      port: 6379
